--- a/GreenGardenClient/GreenGardenClient/Views/Service/Checkout.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/Checkout.cshtml
@@ -68,7 +68,7 @@
                                     </ul>
                                 </li>
 
-                                <li><a href="blog.html" class="nav-link">Liên hệ</a></li>
+                                <li><a href="~/Common/Contact" class="nav-link">Liên hệ</a></li>
                                 <li>
                                     @if (HttpContextAccessor.HttpContext.Session.GetString("Email") == null)
                                     {
