--- a/GreenGardenClient/GreenGardenClient/Views/Service/Cart.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/Cart.cshtml
@@ -30,7 +30,39 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
-
+@{
+    if (TempData["Notification"] != null)
+    {
+        <div id="notification" class="alert alert-warning" role="alert">
+            Thêm vào giỏ hàng thành công
+        </div>
+    }
+}
+<style>
+    #notification {
+        position: fixed;
+        top: 20px; /* Khoảng cách từ đầu trang */
+        right: 20px; /* Khoảng cách từ bên phải */
+        z-index: 1050; /* Đảm bảo thông báo nằm trên các phần tử khác */
+        opacity: 1; /* Bắt đầu với độ mờ là 1 */
+        transition: opacity 1s ease-out, transform 1s ease-out; /* Hiệu ứng chuyển đổi cho độ mờ và biến đổi */
+        transform: translateY(-10px); /* Đưa thông báo lên một chút */
+        width: auto; /* Hoặc thay đổi thành một giá trị cụ thể, ví dụ: 300px */
+        max-width: 300px; /* Giới hạn chiều rộng tối đa */
+        padding: 15px; /* Khoảng cách bên trong cho thông báo */
+    }
+</style>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        if ($("#notification").length) {
+            setTimeout(function () {
+                $("#notification").css("opacity", "0"); // Đặt độ mờ thành 0
+                $("#notification").css("transform", "translateY(10px)"); // Đưa thông báo xuống một chút khi ẩn
+            }, 3000); // Sau 3 giây
+        }
+    });
+</script>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
 
@@ -60,18 +92,19 @@
                     <div class="col-9 text-right">
                         <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
                             <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                                <li ><a href="/Home" class="nav-link">Trang chủ</a></li>
+                                <li><a href="/Home" class="nav-link">Trang chủ</a></li>
                                 <li><a href="/Common/Event" class="nav-link">Sự kiện</a></li>
                                 <li class="has-dropdown">
                                     <a href="/Service" class="nav-link">Dịch vụ</a>
                                     <ul class="dropdown">
+                                        <li><a href="/Service/ComboList" class="nav-link">Danh sách combo vé</a></li>
                                         <li><a href="/Service/OrderTicket" class="nav-link">Danh sách vé</a></li>
                                         <li><a href="/Service/OrderFoodAndDrink" class="nav-link">Danh sách đồ ăn</a></li>
                                         <li><a href="/Service/OrderGear" class="nav-link">Danh sách dụng cụ</a></li>
                                     </ul>
                                 </li>
 
-                                <li><a href="blog.html" class="nav-link">Liên hệ</a></li>
+                                <li><a href="~/Common/Contact" class="nav-link">Liên hệ</a></li>
                                 <li>
                                     @if (HttpContextAccessor.HttpContext.Session.GetString("Email") == null)
                                     {
@@ -104,7 +137,7 @@
                                                 {
 
                                                 <li><a href="~/Service/OrderHistory" class="nav-link">Lịch sử đặt hàng</a></li>
-                                                <li><a href="~/Service/Cart" class="nav-link">Giỏ hàng</a></li>
+                                                <li class="active"><a href="~/Service/Cart" class="nav-link">Giỏ hàng</a></li>
                                                 <li><a href="~/Home/Logout" class="nav-link">Đăng xuất</a></li>
 
                                                 }
@@ -116,8 +149,8 @@
                                 </li>
                                 @if (HttpContextAccessor.HttpContext.Session.GetInt32("RoleId") == 3)
                                 {
-                                    <li class="active">
-                                        <a href="~/Service/Cart" class="nav-link">
+                                    <li>
+                                        <a href="~/Service/Cart" class="active" class="nav-link">
                                             <i class="fas fa-shopping-cart"></i>
                                         </a>
                                     </li>
@@ -201,14 +234,15 @@
                         padding: 10px;
                         margin: 10px 0;
                         border: none;
-                        transition: background-color 0.3s ease, color 0.3s ease; 
+                        transition: background-color 0.3s ease, color 0.3s ease;
                     }
+
                         .summary button:hover {
                             background-color: #d99b53 !important;
-                            color: white !important; 
+                            color: white !important;
                         }
 
-             
+
                 .form-label {
                     color: #495057;
                 }
@@ -225,11 +259,6 @@
                         box-shadow: 0px 0px 8px rgba(0, 123, 255, 0.5);
                         border-color: #007bff;
                     }
-      
-
-            
-
-
             </style>
             <script>
                 $(document).ready(function () {
@@ -245,19 +274,7 @@
             </script>
         </header>
 
- @*       <div class="ftco-blocks-cover-1">
-            <div class="site-section-cover overlay" style="background-image: url('@Url.Content("~/images/p22.jpg")')">
-                <div class="container">
-                    <div class="row align-items-center justify-content-center text-center">
-                        <div class="col-md-5" data-aos="fade-up">
-                            <h1 class="mb-3 text-white">Về dịch vụ</h1>
-                            <p>Những dịch vụ nổi bật tại sông quê giúp khách hàng trải nghiệm tốt nhất.</p>
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>*@
         <div class="container mt-5" data-aos="fade-up">
             <div class="row">
                 <div class="col-md-8">
@@ -265,8 +282,11 @@
                     <div>
                         Ngày sử dụng(tháng-ngày-năm):
                         <!-- Thêm input date để thay đổi ngày sử dụng trong giỏ hàng -->
-                        <input type="date" id="cart-usage-date" value="@Model.FirstOrDefault()?.UsageDate.ToString("yyyy-MM-dd")"
+                        <!-- Thêm input datetime-local để thay đổi ngày và giờ sử dụng trong giỏ hàng -->
+                        <input type="datetime-local" id="cart-usage-date"
+                               value="@Model.FirstOrDefault()?.UsageDate.ToString("yyyy-MM-ddTHH:mm")"
                                onchange="updateCartDate(this.value)">
+
                     </div>
                     @foreach (var item in Model)
                     {
@@ -306,7 +326,9 @@
                         <p>Số tiền: <span id="totalPrice">@Model.Sum(item => item.TotalPrice).ToString("N0")</span> đ</p>
                         <p>Đã cọc: 0đ</p>
                         <p>Tổng: <span id="totalPriceFinal">@Model.Sum(item => item.TotalPrice).ToString("N0")</span> đ</p>
-                        <button class="btn btn-dark">Quay lại dịch vụ</button>
+                        <form action="~/Service" method="get">
+                            <button type="submit" class="btn btn-dark">Quay lại dịch vụ</button>
+                        </form>
                         <!-- Remove the existing form's submit button -->
                         <form id="paymentForm" asp-controller="Service" asp-action="Order" method="post">
                             <button type="button" class="btn btn-dark" onclick="submitPayment()">Đặt ngay </button>
@@ -316,68 +338,8 @@
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
-
-            <footer class="site-footer bg-light">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <h2 class="footer-heading mb-3">Facebook</h2>
-                            <div class="row">
-                                <div class="col-4 gal_col">
-                                    <a href="#"><img src="~/images/Picture1.jpg" alt="Image" class="img-fluid"></a>
-                                </div>
-                                <div class="col-4 gal_col">
-                                    <a href="#"><img src="~/images/Picture8.jpg" alt="Image" class="img-fluid"></a>
-                                </div>
-                                <div class="col-4 gal_col">
-                                    <a href="#"><img src="~/images/Picture7.jpg" alt="Image" class="img-fluid"></a>
-                                </div>
-                                <div class="col-4 gal_col">
-                                    <a href="#"><img src="~/images/Picture4.jpg" alt="Image" class="img-fluid"></a>
-                                </div>
-                                <div class="col-4 gal_col">
-                                    <a href="#"><img src="~/images/Picture13.jpg" alt="Image" class="img-fluid"></a>
-                                </div>
-                                <div class="col-4 gal_col">
-                                    <a href="#"><img src="~/images/Picture6.jpg" alt="Image" class="img-fluid"></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 ml-auto">
-                            <div class="row">
-                                <div class="col-lg-6 ml-auto">
-                                    <h2 class="footer-heading mb-4">Truy cập nhanh</h2>
-                                    <ul class="list-unstyled">
-                                        <li><a href="#">Facebook</a></li>
-                                        <li><a href="#">Instagram</a></li>
-                                        <li><a href="#">Tiktok</a></li>
-
-                                    </ul>
-                                </div>
-                                <div class="col-lg-6">
-                                    <h2 class="footer-heading mb-4">Phản hồi</h2>
-                                    <p>Nơi bạn đưa ra những phản hồi về dịch vụ,nhân viên tại sông quê</p>
-                                    <form action="#" class="d-flex" class="subscribe">
-                                        <input type="text" class="form-control mr-3" placeholder="Phản hồi">
-                                        <input type="submit" value="Send" class="btn btn-primary">
-                                    </form>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-            </footer>
-
         </div>
-
-
+    </div>
         <script src="~/js/jquery-3.3.1.min.js"></script>
         <script src="~/js/jquery-migrate-3.0.0.js"></script>
         <script src="~/js/popper.min.js"></script>
@@ -509,34 +471,97 @@
             }
 
             function submitPayment() {
+                // Check if there are any tickets or combos in the cart
+                let hasTicketOrCombo = false;
+                document.querySelectorAll('.cart-item').forEach(function (item) {
+                    let typeCategory = item.querySelector('.cart-item-details p:nth-child(2)').innerText; // Gets the TypeCategory
+                    if (typeCategory === "TicketCategory" || typeCategory === "ComboCategory") {
+                        hasTicketOrCombo = true;
+                    }
+                });
+
+                // If there are no tickets or combos, show a notification and stop the order
+                if (!hasTicketOrCombo) {
+                    alert('Giỏ hàng của bạn cần có ít nhất một vé hoặc combo để đặt hàng!');
+                    return; // Exit the function
+                }
+
+                console.log($('#paymentForm').serialize()); // Log the serialized data
+
                 $.ajax({
                     url: '/Service/Order',
                     type: 'POST',
-                    data: $('#paymentForm').serialize(), // Serialize the form data
+                    data: $('#paymentForm').serialize(),
                     success: function (response) {
-                        // Xóa giỏ hàng trên giao diện
-                        $('.cart-item').remove(); // Xóa tất cả các mục trong giỏ hàng
-                        $('#totalPrice').text('0'); // Đặt tổng giá về 0
-                        $('#totalPriceFinal').text('0'); // Đặt tổng giá cuối cùng về 0
+                        $('.cart-item').remove();
+                        $('#totalPrice').text('0');
+                        $('#totalPriceFinal').text('0');
+                        alert('Đặt đơn thành công!');
 
-                        // Hiển thị thông báo thành công
-                        alert('Thanh toán thành công!');
                         if ($('.cart-item').length === 0) {
                             sessionStorage.removeItem('usageDateForAll');
                         }
-
-                        // Optionally, bạn có thể chuyển hướng đến một trang thành công
-                        // window.location.href = '/PaymentSuccess';
                     },
                     error: function (xhr, status, error) {
-                        // Handle error response, show an error message
-                        alert('Có lỗi xảy ra khi thanh toán. Vui lòng thử lại.');
+                        console.error(xhr); // Log the full error response
+                        alert('Đặt ngay thất bại. Vui lòng đăng nhập để đặt ngay');
                     }
                 });
             }
+
         </script>
 </body>
+<footer class="site-footer bg-light">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3">
+                <h2 class="footer-heading mb-3">Facebook</h2>
+                <div class="row">
+                    <div class="col-4 gal_col">
+                        <a href="#"><img src="~/images/Picture1.jpg" alt="Image" class="img-fluid"></a>
+                    </div>
+                    <div class="col-4 gal_col">
+                        <a href="#"><img src="~/images/Picture8.jpg" alt="Image" class="img-fluid"></a>
+                    </div>
+                    <div class="col-4 gal_col">
+                        <a href="#"><img src="~/images/Picture7.jpg" alt="Image" class="img-fluid"></a>
+                    </div>
+                    <div class="col-4 gal_col">
+                        <a href="#"><img src="~/images/Picture4.jpg" alt="Image" class="img-fluid"></a>
+                    </div>
+                    <div class="col-4 gal_col">
+                        <a href="#"><img src="~/images/Picture13.jpg" alt="Image" class="img-fluid"></a>
+                    </div>
+                    <div class="col-4 gal_col">
+                        <a href="#"><img src="~/images/Picture6.jpg" alt="Image" class="img-fluid"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8 ml-auto">
+                <div class="row">
+                    <div class="col-lg-6 ml-auto">
+                        <h2 class="footer-heading mb-4">Truy cập nhanh</h2>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Instagram</a></li>
+                            <li><a href="#">Tiktok</a></li>
 
+                        </ul>
+                    </div>
+                    <div class="col-lg-6">
+                        <h2 class="footer-heading mb-4">Phản hồi</h2>
+                        <p>Nơi bạn đưa ra những phản hồi về dịch vụ,nhân viên tại sông quê</p>
+                        <form action="#" class="d-flex" class="subscribe">
+                            <input type="text" class="form-control mr-3" placeholder="Phản hồi">
+                            <input type="submit" value="Send" class="btn btn-primary">
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+</footer>
 </html>
 
 
